# gst-plugin-bigeye

./: Cargo.toml  README.md
patches/uvc-sys/: Cargo.toml  build.rs  lib.rs
patches/uvc-sys/src/: lib.rs
scripts/: build_inspect.sh  build_run.sh  env.sh  run.sh
src/: lib.rs
src/bigeyesrc/: imp.rs  mod.rs
