[package]
name = "gst-plugin-bigeye"
version = "0.1.0"
authors = ["Ray Foxyote <sebastian@centricular.com>"]
repository = "https://github.com/Banakin/gst-plugin-bigeye"
homepage = "https://github.com/Banakin/gst-plugin-bigeye"
license = "Apache-2.0"
edition = "2024"
description = "Rust Tutorial Plugin"
readme = "README.md"

[dependencies]
gst = { package = "gstreamer", version = "0.25" }
gst-base = { package = "gstreamer-base", version = "0.25" }
gst-video = { package = "gstreamer-video", version = "0.25" }
uvc = { version = "0.2.0", default-features = false }

[lib]
name = "gstbigeye"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }

[patch.crates-io]
uvc-sys = { path = "./patches/uvc-sys" }
